# picar_mum

./: .gitignore  README.md  README_env_aliases.md  README_movingBox.md  Tutorials_gettingStarted_doku  requirements.txt
catkin_ws/: env.sh
catkin_ws/src/: .copy_pi.sh.swp  Test_Paul  copy_pi.sh  generate_topic_comments.py
catkin_ws/src/00_common/picar_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/00_common/picar_msgs/msg/: CarCmd.msg  LanePose.msg  MsgCurvePoint2D.msg  SteeringParameters.msg  WheelSpeedStamped.msg
catkin_ws/src/00_common/picar_msgs/srv/: SetBool.srv  SetDistanceParametersList.srv  SetSteeringParametersList.srv  SetValue.srv  SetVelocityParametersList.srv  SetVelocityPickerParameterList.srv
catkin_ws/src/10_hardware/camera/: CMakeLists.txt  package.xml
catkin_ws/src/10_hardware/camera/cfg/: cam_params.cfg
catkin_ws/src/10_hardware/camera/launch/: camera_info_node.launch  camera_node.launch  decompress_node.launch
catkin_ws/src/10_hardware/camera/src/: camera_info_node.py  camera_node.py  decompress_node.py
catkin_ws/src/10_hardware/motor/: CMakeLists.txt  package.xml
catkin_ws/src/10_hardware/motor/cfg/: motor.cfg
catkin_ws/src/10_hardware/motor/launch/: motor_node.launch  wheel_speed_node.launch
catkin_ws/src/10_hardware/motor/src/: motor_node.py  test_rpm.py  wheel_speed_node.py
catkin_ws/src/10_hardware/picar/: CMakeLists.txt  package.xml  picar.py
catkin_ws/src/10_hardware/picar_parameters/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/10_hardware/picar_parameters/include/picar/: parameters.py
catkin_ws/src/90_simulation/picar_description/: CMakeLists.txt  package.xml
catkin_ws/src/90_simulation/picar_description/launch/: simcar.launch  simcar_static.launch
catkin_ws/src/90_simulation/picar_description/urdf/: properties.xacro  simcar.xacro  simcar_static.xacro
catkin_ws/src/90_simulation/simulation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/90_simulation/simulation/launch/: advanced_loop.launch  calibration.launch  car_cmd_convert_node.launch  null_loop.launch  null_loop_staticBox.launch  race_loop.launch  simple_loop_ccw.launch  simple_loop_cw.launch  simple_loop_cw_new.launch
catkin_ws/src/90_simulation/simulation/models/Tags/Tag-0/scripts/: textures.material
catkin_ws/src/90_simulation/simulation/models/Tags/Tag-1/scripts/: textures.material
catkin_ws/src/90_simulation/simulation/models/calib_plane/: model.config  model.sdf
catkin_ws/src/90_simulation/simulation/models/calib_plane/materials/scripts/: curved_tile.material
catkin_ws/src/90_simulation/simulation/models/curved_tile/: model.config  model.sdf
catkin_ws/src/90_simulation/simulation/models/curved_tile/materials/scripts/: curved_tile.material
catkin_ws/src/90_simulation/simulation/models/empty_ground_plane/: model.config  model.sdf
catkin_ws/src/90_simulation/simulation/models/empty_ground_plane/materials/scripts/: empty_ground_plane.material
catkin_ws/src/90_simulation/simulation/models/null_track/: model.config  model.sdf  nulltrack.blend
catkin_ws/src/90_simulation/simulation/models/null_track/meshes/: null_track.dae
catkin_ws/src/90_simulation/simulation/models/picar/: model.config  model.sdf
catkin_ws/src/90_simulation/simulation/models/race_track/: model.config  model.sdf  racetrack.blend
catkin_ws/src/90_simulation/simulation/models/race_track/meshes/: race_track.dae
catkin_ws/src/90_simulation/simulation/models/simple_track/: model.config  model.sdf
catkin_ws/src/90_simulation/simulation/models/simple_track/meshes/: simple_track.dae
catkin_ws/src/90_simulation/simulation/models/straight_tile/: model.config  model.sdf
catkin_ws/src/90_simulation/simulation/models/straight_tile/materials/scripts/: straight_tile.material
catkin_ws/src/90_simulation/simulation/plugins/: picarPlugin.cpp
catkin_ws/src/90_simulation/simulation/src/: car_cmd_convert_node.py
catkin_ws/src/90_simulation/simulation/worlds/: CMakeLists.txt  advanced_loop.world  animated_box.cc  animated_box.world  animated_box2.cc  calibration.world  integrated_main.cc  null_loop.cc  null_loop.world  null_loop_3.cc  null_loop_staticBox.world  race_loop.world  simple_loop.world  simple_loop_MRB.world  simple_loop_new.world
catkin_ws/src/color_normalization/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/keyboard_control/: CMakeLists.txt
catkin_ws/src/velocity_control_tuning/: CMakeLists.txt  package.xml
catkin_ws/src/video_live_stream/: CMakeLists.txt  package.xml
tasks/FinalProject/CreateTracks/: getCircle.m  getLine.m  raceTrack.m  raceTrack.m~  race_track.txt  test_track.txt
tasks/FinalProject/PathPlanning/: Animation.asv  Animation.m  BycicleModel.m  MAIN.asv  MAIN.m  MovingObject03to08.csv  MovingObject04to08.csv  Overtake.csv  Overtaker08_new.csv  Overtaker_moving_object.csv  Overtaker_moving_object_new.csv  StaticObject0to08.csv  V0to0  animation.mat  arrow.m  boundaryConstraint.asv  boundaryConstraint.m  even_sample.m  objective.m  paint_arrow_2d.m  paint_arrow_3d.m  pathConstraint.asv  pathConstraint.m  v05to05.csv  v07to07.csv  v08to08.csv
tasks/task0/: picarPos.xml  simcarPosDefaultSettings.txt  simcarPosUnstableSettingsSpeed0_7PGain200.txt  simcarPosUnstableSettingsSpeed0_8.txt  track_simple_loop.csv
tasks/task1/: Fahrzeugparameter.xlsx  GetYawRate.m  Meas_car_new.csv  Seitenkraftbeiwerte.m  StationaereKreisfahrt_YawRate.m  Vel06Stear1775.txt  Vel09Stear185.txt  dpsi_Function.m  getDeltaX.m  get_oscillatordata.m  meas1_no_car.csv  meas1_with_car.csv  measurment_angles.m  measurment_data_oscilloscope.asv  measurment_data_oscilloscope.m  measurments.asv  measurments.m  measurments_speed.asv  measurments_speed.m  skitpad.xml  tek0006ALL.csv
tasks/task1/Skidpad/: Test_script.m  get_imu_data.m  measurement_skidpad.asv  (+6 more)
tasks/task3/: getTrackedSine.m  plotsinetracking.m  time_radius.txt  time_slope.txt  tracking_sine.txt  tracking_sine_better.txt
(+264 files in other folders)
