<?xml version="1.0"?>
<package format="2">
  <name>picar_msgs</name>
  <version>0.0.0</version>
  <description>The picar_msgs package</description>

  <maintainer email="duckietown_mum@todo.todo">duckietown_mum</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
