<?xml version="1.0"?>
<package format="2">
  <name>camera</name>
  <version>0.0.0</version>
  <description>This package contains code to produce camera images</description>

  <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>picar_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
