<?xml version="1.0"?>
<package format="2">
  <name>motor</name>
  <version>0.0.0</version>
  <description>This package is responsible for controlling the motors</description>

  <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>picar_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
