<?xml version="1.0"?>
<package format="2">
  <name>picar_parameters</name>
  <version>0.0.0</version>
  <description>This package is responsible for the picar parameters</description>

  <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>picar_msgs</depend>

  <export>
  </export>
</package>
