<?xml version="1.0"?>
<package format="2">
    <name>picar_description</name>
    <version>0.0.0</version>
    <description>description of the car</description>

    <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_ros</depend>
    <depend>gazebo_plugins</depend>
    <depend>picar_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    </export>
</package>